@@ -1,3 +1,10 @@
+2005-10-14  Vincent Noel <vnoel@cox.net>
+
+	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_close),
+	(loginfo_new):
+	* info.h:
+	* logview.c: Shuffling and cleaning up.
+
 2005-10-14  Vincent Noel  <vnoel@cox.net>
 
 	* info.c (RepaintLogInfo): Use
